--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.6",
     "icomoon-react": "^2.0.19",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.16",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "node-sass": "^5.0.0",
