--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.28.0",
     "sequelize": "^6.4.0",
     "sequelize-cli": "^6.2.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
